--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
             position: absolute;
             bottom: 2rem;
             right: 2rem;
-            width: 250px;
-            height: 250px;
+            width: 350px;
+            height: 500px;
             z-index: 10;
-            object-fit: contain;
         }
         
         #home, #problem, #features, #design, #team, #results {
@@ -157,7 +156,7 @@
     <!-- Main Content Area -->
     <main class="main-content">
         <!-- Mascot Image (will appear on all pages) -->
-        <img src="/api/placeholder/150/150" alt="FitMate Mascot" class="mascot">
+        <img src="assets/images/mascot.png" alt="FitMate Mascot" class="mascot">
         
         <!-- Home Section -->
         <section id="home" class="content-section active">
@@ -171,11 +170,8 @@
                     </div>
                 </div>
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
-                    <div class="video-container">
-                        <video controls autoplay muted loop class="promo-video">
-                            <source src="assets/videos/promo.mov" type="video/quicktime">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="phone-mockup">
+                        <img src="assets/images/app-home.png" alt="FitMate App" class="w-full">
                     </div>
                 </div>
             </div>
@@ -210,7 +206,7 @@
                 </div>
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
                     <div class="phone-mockup">
-                        <img src="/api/placeholder/270/540" alt="FitMate Problem Visual" class="w-full">
+                        <img src="assets/images/app-problem.png" alt="FitMate Problem Visual" class="w-full">
                     </div>
                 </div>
             </div>
@@ -257,10 +253,10 @@
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
                     <div class="grid grid-cols-2 gap-4">
                         <div class="phone-mockup">
-                            <img src="/api/placeholder/270/540" alt="Feature 1" class="w-full">
+                            <img src="assets/images/app-feature1.png" alt="Feature 1" class="w-full">
                         </div>
                         <div class="phone-mockup">
-                            <img src="/api/placeholder/270/540" alt="Feature 2" class="w-full">
+                            <img src="assets/images/app-feature2.png" alt="Feature 2" class="w-full">
                         </div>
                     </div>
                 </div>
@@ -290,10 +286,10 @@
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
                     <div class="grid grid-cols-2 gap-4">
                         <div class="phone-mockup">
-                            <img src="/api/placeholder/270/540" alt="UI Design 1" class="w-full">
+                            <img src="assets/images/app-design1.png" alt="UI Design 1" class="w-full">
                         </div>
                         <div class="phone-mockup">
-                            <img src="/api/placeholder/270/540" alt="UI Design 2" class="w-full">
+                            <img src="assets/images/app-design2.png" alt="UI Design 2" class="w-full">
                         </div>
                     </div>
                 </div>
@@ -321,7 +317,7 @@
                 </div>
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
                     <div class="phone-mockup">
-                        <img src="/api/placeholder/270/540" alt="Team Photo" class="w-full">
+                        <img src="assets/images/team-photo.png" alt="Team Photo" class="w-full">
                     </div>
                 </div>
             </div>
@@ -362,7 +358,7 @@
                 </div>
                 <div class="w-full md:w-1/2 flex justify-center mt-8 md:mt-0">
                     <div class="phone-mockup">
-                        <img src="/api/placeholder/270/540" alt="Results Visualization" class="w-full">
+                        <img src="assets/images/app-results.png" alt="Results Visualization" class="w-full">
                     </div>
                 </div>
             </div>
