--- a/index.html
+++ b/index.html
@@ -115,12 +115,7 @@
             }
             
             .mascot {
-                width: 200px;
-                height: 280px;
-                bottom: 0;
-                right: 0;
-                opacity: 0.7;
-                z-index: 0;
+                display: none; /* Hide mascot on mobile */
             }
         }
         
