--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitMate - Your AI Fitness Companion</title>
+    <title>FitMate - Your Partner in Prime</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -250,8 +250,8 @@
             <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">
                 <div class="w-full md:w-1/3 flex flex-col items-start">
                     <h1 class="h1-style mb-4">Meet FitMate</h1>
-                    <p class="h3-style mb-6">Your AI-powered fitness companion</p>
-                    <p class="body-text mb-8 opacity-80">SDP Bronze Medal Winner - Innovation in Health Technology</p>
+                    <p class="h3-style mb-6">Your Partner in Prime</p>
+                    <p class="body-text mb-8 opacity-80">CS SDP Bronze Medal Winner</p>
                     <div class="flex">
                         <a href="#features" class="neon-button" onclick="showSection('features')">Explore Features</a>
                     </div>
